max-encoded-len/tests/max_encoded_len_ui/not_mel.rs
use codec::Encode;
use max_encoded_len::MaxEncodedLen;

#[derive(Encode)]
struct NotMel;

#[derive(Encode, MaxEncodedLen)]
struct Generic<T> {
	t: T,
}

fn main() {
	let _ = Generic::<NotMel>::max_encoded_len();
}
